fix problem with QR display on iphone

--- a/app/assets/stylesheets/components/_qrcode.scss
+++ b/app/assets/stylesheets/components/_qrcode.scss
@@ -21,8 +21,8 @@ table.qr-code td {
   border-collapse: collapse;
   padding: 0;
   margin: 0;
-  width: 10px;
-  height: 10px;
+  width: 5px;
+  height: 5px;
 }
 table.qr-code td.black { background-color: #000; }
 table.qr-code td.white { background-color: #fff; }
